# dnfdragora

./: .gitignore  AUTHORS  CMakeLists.txt  Changes  README.md  TODO  TODO.md  dnfbase.py  dnfdragora.py  dnfdragora.yaml.example  dnfdragora.yaml.user_prefs.example  groupicons.py
.github/workflows/: build.yml
cmake/: FindPython3Module.cmake  FindPythonModule.cmake
dnfdragora/: backend.py  basedragora.py  compsicons.py  config.py  const.py  const.py.in  dialogs.py  dnf_backend.py  dnfbase.py  dnfd_client.py  groupicons.py  helpinfo.py  misc.py  progress_ui.py  ui.py  updater.py  version.py.in
etc/: dnfdragora.yaml.in
man/: CMakeLists.txt  conf.py.in  dnfdragora.rst  dnfdragora_yaml.rst
po/: CMakeLists.txt  LINGUAS  af.po  ar.po  ast.po  az.po  bg.po  bn.po  br.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  dnfdragora.pot  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  ky.po  lt.po  mk.po  mt.po  nb.po  (+23 more)
po/.tx/: config
po/desktop/: af.po  ar.po  ast.po  bg.po  bn.po  br.po  ca.po  cs.po  cy.po  da.po  de.po  dnfdragora_desktop.pot  el.po  en_GB.po  eo.po  es.po  es_419.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  ko.po  ky.po  lt.po  ltg.po  mk.po  ms.po  nb.po  nl.po  (+20 more)
po/desktop/.tx/: config
share/applications/: org.mageia.dnfdragora-gtk.desktop  org.mageia.dnfdragora-localinstall-gtk.desktop  org.mageia.dnfdragora-localinstall-qt.desktop  org.mageia.dnfdragora-localinstall.desktop  org.mageia.dnfdragora-qt.desktop  org.mageia.dnfdragora-updater.desktop  org.mageia.dnfdragora.desktop
share/dnfdragora/: dnfdragora-repos.yaml.in
share/metainfo/: org.mageia.dnfdragora.appdata.xml  org.mageia.dnfdragora.metainfo.xml
test/: test_dnfd_client_unit.py  test_get_updates.py
tools/: desktoppo.py  gen-comps-category-list.sh  po-compile.sh  po-update.sh  transconverter.py
